feat(login_required): Allow access control using login_required decorator
